Fixing bug on list-item spacing and bug on icon sizes in admin toolbar

--- a/lg-main-9.5.19.css
+++ b/lg-main-9.5.19.css
@@ -1,16 +1,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;0,700;1,400;1,500;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-<link rel="shortcut icon"href="//www.utc.edu/favicon.ico?v=2"type="image/x-icon"/>
-<link rel="stylesheet" type="text/css" href="//libapps.s3.amazonaws.com/sites/197/include/lib-main-min.css">
-<!--
-<link rel="stylesheet"type="text/css"href="https://www.utc.edu/library/_resources/css/lib-main-min.css">
--->
+
 <script src="https://kit.fontawesome.com/6cef20ef42.js" crossorigin="anonymous"></script>
 
 
 <style>
-@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic);
 @import url(//fonts.googleapis.com/css?family=Exo:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 
@@ -32,13 +27,11 @@
 
 /* establish box-sizing and clear margins */
 
-* {
+
+html,
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-html {
     box-sizing: border-box;
     font-size: unset;
 }
@@ -228,6 +221,8 @@ button,
 .bars.icon-menu-item {
     margin-top: 6px;
     cursor: pointer;
+    padding-left: 12px; 
+    padding-right: 12px; 
 }
 
 .bars.icon-menu-item i {
